phase 6 beginning